--- a/rl2/settings.yml
+++ b/rl2/settings.yml
@@ -5,7 +5,7 @@ rewards: [20, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -1]
 init_pos_diver: [1, 8]
 
 ## Game frames per second. Default: 60 Recommended: 1000
-frames_per_second: 10000
+frames_per_second: 1000
 
 ## Player type or nature. Possible values: "ai_rl" or "random". Default: "ai_rl"
 # player_type: "random"
@@ -59,4 +59,4 @@ episode_max: 1000
 visualize_exploration: true
 #seed of the experience
 # seed: 0
-# seed: 2910399478
+seed: 2910399478
