--- a/rl3/settings.yml
+++ b/rl3/settings.yml
@@ -1,24 +1,24 @@
 # rewards: [golden_fish, jellyfish_1, jellyfish_2, ... , step]
-rewards: [20, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -1]
+rewards: [20, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10000]
 
 ## Initial position of the diver. Default: [1, 8]
 init_pos_diver: [1, 8]
 
 ## Game frames per second. Default: 60 Recommended: 1000
-frames_per_second: 10000
+frames_per_second: 1
 
 ## Player type or nature. Possible values: "ai_rl" or "random". Default: "ai_rl"
 # player_type: "random"
 player_type: "ai_rl"
 
 ## Q learning learning rate
-alpha: 0.1
+alpha: 0.5
 
 ## Q learning discount rate
-gamma: 0.1
+gamma: 0.9
 
 # Disables the graphical engine of the simulator (true by default)
-headless: true
+headless: false
 
 ## Epsilon initial
 epsilon_initial: 1
@@ -59,4 +59,4 @@ episode_max: 1000
 visualize_exploration: true
 #seed of the experience
 # seed: 0
-# seed: 2910399478
+seed: 2910399478
