--- a/rl4/settings.yml
+++ b/rl4/settings.yml
@@ -5,7 +5,7 @@ rewards: [20, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -1]
 init_pos_diver: [1, 8]
 
 ## Game frames per second. Default: 60 Recommended: 1000
-frames_per_second: 10000
+frames_per_second: 1000
 
 ## Player type or nature. Possible values: "ai_rl" or "random". Default: "ai_rl"
 # player_type: "random"
@@ -15,7 +15,7 @@ player_type: "ai_rl"
 alpha: 0.1
 
 ## Q learning discount rate
-gamma: 0.1
+gamma: 0.9
 
 # Disables the graphical engine of the simulator (true by default)
 headless: true
@@ -24,10 +24,10 @@ headless: true
 epsilon_initial: 1
 
 ## Epsilon final
-epsilon_final: 1
+epsilon_final: 0.2
 
 ## Annealing timesteps
-annealing_timesteps: 1000
+annealing_timesteps: 10000
 
 ## threshold
 threshold: 1e-6
@@ -58,5 +58,5 @@ episode_max: 1000
 # Visualize exploration (slow, just for debugging)
 visualize_exploration: true
 #seed of the experience
-# seed: 0
-# seed: 2910399478
+seed: 0
+#seed: 2910399478
