--- a/rl5/settings.yml
+++ b/rl5/settings.yml
@@ -24,13 +24,13 @@ headless: true
 epsilon_initial: 1
 
 ## Epsilon final
-epsilon_final: 1
+epsilon_final: 0.2
 
 ## Annealing timesteps
-annealing_timesteps: 1
+annealing_timesteps: 10000
 
 ## threshold
-threshold: 1e-1
+threshold: 1e-6
 
 # Position of the jellyfishes
 jelly_x: [3, 3, 4, 4, 4, 4, 5, 5, 8, 7, 8]
@@ -58,5 +58,5 @@ episode_max: 1000
 # Visualize exploration (slow, just for debugging)
 visualize_exploration: true
 #seed of the experience
-# seed: 0
+seed: 0
 # seed: 2910399478
